--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 */6 * * *'
   workflow_dispatch:
 env:
-  GH_USER: aqua-bot
+  GH_USER: ipaqsa
   VERSION: 2
 jobs:
   build:
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.17
+          go-version: 1.20
         id: go
 
       - name: Install bbolt
